<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1E1E1E"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:clickable="true"
                android:paddingTop="10dp"
                android:src="@drawable/logout"


                />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="10sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/gui_demo_21l_5475"
            android:textSize="25sp"
            android:textStyle="bold"
            />
    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#070707"
        app:tabIndicatorColor="#BB1441"
        app:tabIconTint="#BB1441"
        app:tabTextColor="@color/white"
        android:id="@+id/tabLayout"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout="@android:layout/activity_list_item"
            android:icon="@drawable/heart"

            android:text="@string/one"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout="@android:layout/activity_list_item"
            android:icon="@drawable/call"
            android:text="@string/two"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout="@android:layout/activity_list_item"
            android:icon="@drawable/person"
            android:text="@string/three"
            />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11" />

        <Button
            android:id="@+id/btnInsta"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/instagram_page"
            android:textColor="#BB1441"
            />

    </LinearLayout>



</LinearLayout>